==> ab25cq/comelang/sd/mmc_pico_spi.c <==
#include "pico/stdlib.h"
#include <stdio.h>
#include "hardware/spi.h"
#define DEF_SPI_TX_PIN 19 // 赤
#define DEF_SPI_RX_PIN 16 // 茶
#define DEF_SPI_SCK_PIN 18 // 紫
#define DEF_SPI_CSN_PIN 17 // オレンジ
#define SPIDEV spi0
#define FCLK_FAST()    { }
#define FCLK_SLOW()    { }
#define CS_HIGH()    { gpio_put( DEF_SPI_CSN_PIN, 1 ); /* HIGH */ }
#define CS_LOW()    { gpio_put(DEF_SPI_CSN_PIN , 0 ); /* LOW */ }
#define    MMC_CD        1 /* Card detect (yes:true, no:false, default:true) */
#define    MMC_WP        0 /* Write protected (yes:true, no:false, default:false) */

static BYTE xchg_spi (
    BYTE dat    /* Data to send */
)
{
    uint8_t  src, dst;

    src = dat;
    spi_write_read_blocking( SPIDEV, &src, &dst, 1 );
    return  (BYTE)dst;
}

static void xmit_spi_multi (
    const BYTE *buff,    /* Pointer to the data */
    UINT btx            /* Number of bytes to send (even number) */
)
{
    spi_write_blocking( SPIDEV, buff, btx );
}
