==> Barfell/STM32L151_SPI_SD_MSC/stm32/mmc_stm32f1_spi.c <==
#include "main.h"
#include "spi.h"
#define SDTIMEOUT	2000
#define CS_HIGH()	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET)
#define CS_LOW()	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_RESET)
#define	MMC_CD		1
#define	MMC_WP		0
#define CT_MMC3		0x01		/* MMC ver 3 */
#define CT_MMC4		0x02		/* MMC ver 4+ */
#define CT_MMC		0x03		/* MMC */
#define CT_SDC1		0x02		/* SDC ver 1 */
#define CT_SDC2		0x04		/* SDC ver 2+ */
#define CT_SDC		0x0C		/* SDC */
#define CT_BLOCK	0x10		/* Block addressing */
#define	_BV(bit) (1<<(bit))
#define SPIx_CR1	SPI1->CR1
#define SPIx_SR		SPI1->SR
#define SPIx_DR		SPI1->DR
#include "stm32l1xx_hal.h"
#include "diskio.h"
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */

static BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
//	SPIx_DR = dat;				/* Start an SPI transaction */
//	while ((SPIx_SR & 0x83) != 0x03) ;	/* Wait for end of the transaction */
//	return (BYTE)SPIx_DR;		/* Return received byte */
	BYTE rxdat;
	//while(!__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_TXE));
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	HAL_SPI_TransmitReceive(&hspi1, &dat, &rxdat, sizeof (BYTE), SDTIMEOUT);
	return (BYTE) rxdat;
}

static void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (even number) */
)
{
//	WORD d;


//	SPIx_CR1 &= ~_BV(6);
//	SPIx_CR1 |= (_BV(6) | _BV(11));		/* Put SPI into 16-bit mode */

//	d = buff[0] << 8 | buff[1]; buff += 2;
//	SPIx_DR = d;	/* Send the first word */
//	btx -= 2;
//	do {
//		d = buff[0] << 8 | buff[1]; buff += 2;	/* Word to send next */
//		while ((SPIx_SR & 0x83) != 0x03) ;	/* Wait for end of the SPI transaction */
//		SPIx_DR;							/* Discard received word */
//		SPIx_DR = d;						/* Start next transaction */
//	} while (btx -= 2);
//	while ((SPIx_SR & 0x83) != 0x03) ;	/* Wait for end of the SPI transaction */
//	SPIx_DR;							/* Discard received word */

//	SPIx_CR1 &= ~(_BV(6) | _BV(11));	/* Put SPI into 8-bit mode */
//	SPIx_CR1 |= _BV(6);
	//while(!__HAL_SPI_GET_FLAG(&hspi1, SPI_FLAG_TXE));
	while (HAL_SPI_GetState(&hspi1) != HAL_SPI_STATE_READY);
	HAL_SPI_Transmit(&hspi1, (uint8_t*)buff, btx, btx*SDTIMEOUT);
}
